--- a/src/Omdh.Accounting.Web/Pages/ChartOfAccounts/Index.cshtml
+++ b/src/Omdh.Accounting.Web/Pages/ChartOfAccounts/Index.cshtml
@@ -10,7 +10,17 @@
 }
 <abp-card>
     <abp-card-header>
-        <h2>@L["ChartOfAccounts"]</h2>
+        <abp-row>
+            <abp-column size-md="_6">
+                <abp-card-title>@L["ChartOfAccounts"]</abp-card-title>
+            </abp-column>
+            <abp-column size-md="_6" class="text-end">
+                <abp-button id="NewChartOfAccount"
+                            text="@L["New Account"].Value"
+                            icon="plus"
+                            button-type="Primary"/>
+            </abp-column>
+        </abp-row>
     </abp-card-header>
     <abp-card-body>
         <abp-table striped-rows="true" id="ChartOfAccountsTable"></abp-table>
